--- a/quizlearn.html
+++ b/quizlearn.html
@@ -1,4 +1,4 @@
-index.html<!DOCTYPE html >
+<!DOCTYPE html >
 <html>
 <head>
 <script src="learn.js" type="text/javascript"></script>
@@ -47,7 +47,7 @@ table, th, td {
 </style>
 
 <div class="navigation">
-  <a href="homepage.html">Home</a>
+  <a href="index.html">Home</a>
   <A HREF="quizlearn.html">Learning Style Quiz</a>
   <a href="quiz2.html">Study Routine Quiz</a>
   <a href="lastquiz.html">Paper or Electrical?</a>
